[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuehua-ziniao-webdriver"
version = "0.1.2"
description = "紫鸟浏览器自动化 Python SDK - 提供店铺管理、浏览器控制等功能"
authors = [
    { name = "Yuehua", email = "shengxi_2000@outlook.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["ziniao", "browser", "automation", "rpa", "webdriver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]

dependencies = [
    "DrissionPage>=4.0.0",
    "requests>=2.28.0",
    "typing-extensions>=4.5.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/yuehua-ziniao-webdriver"
Documentation = "https://github.com/yourusername/yuehua-ziniao-webdriver#readme"
Repository = "https://github.com/yourusername/yuehua-ziniao-webdriver"
Issues = "https://github.com/yourusername/yuehua-ziniao-webdriver/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yuehua_ziniao_webdriver = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=yuehua_ziniao_webdriver --cov-report=html --cov-report=term"